<resources>
    <string name="app_name">Learn Language</string>
    <string name="txtYourLanguage">I Speaking..</string>
    <string name="txtWantToLearn">I Want to learn..</string>
    <string name="txtYourLanguageAbd">English</string>
    <string name="txtYourLanguageGermany">Deutsch</string>
    <string name="txtYourLanguageFrance">Français</string>
    <string name="txtYourLanguageSpain">Español</string>
    <string name="txtYourLanguageRussia">Русский</string>
    <string name="txtYourLanguageItaly">Italiano</string>
    <string name="txtYourLanguageTurkey">Türkçe</string>
    <string name="txtYourLanguageJapan">日本</string>
    <string name="txtYourLanguageChina">中国人</string>
    <string name="engMenuNavigation">Navigation</string>
    <string name="engMenuAirport">Airport</string>
    <string name="engMenuHotel">Hotel</string>
    <string name="engMenuMarket">Market</string>
    <string name="engMenuCafe">Cafe</string>
    <string name="engMenuMeet">Meet</string>
    <string name="engMenuFriendship">Friendship</string>
    <string name="engMenuGreeting">Greeting</string>
    <string name="engMenuTechnology">Technology</string>
    <string name="engMenuJobs">Jobs</string>
    <string name="engMenuLove">Love</string>
    <string name="engMenuNumbers">Numbers</string>
    <string name="engMenuExit">Exit</string>
    <string name="engNavigation1">Where is the..</string>
    <string name="engNavigation2">How can i go to..</string>
    <string name="engNavigation3">Go straight</string>
    <string name="engNavigation4">Turn left</string>
    <string name="engNavigation5">Turn right</string>
    <string name="engNavigation6">There</string>
    <string name="engNavigation7">At the end of the street</string>
    <string name="engAirport1">I have a plane ticket</string>
    <string name="engAirport2">I do not have a plane ticket</string>
    <string name="engAirport3">Where can I buy plane ticket?</string>
    <string name="engAirport4">I am flying to..</string>
    <string name="engAirport5">I want a plane ticket to..</string>
    <string name="engAirport6">How much is the ticket price?</string>
    <string name="engAirport7">Where can I find a taxi?</string>
    <string name="engHotel1">I do not have a reservation</string>
    <string name="engHotel2">I have a reservation</string>
    <string name="engHotel3">How much is the room rate for a day?</string>
    <string name="engHotel4">Where is room..?</string>
    <string name="engHotel5">I want room cleaning</string>
    <string name="engHotel6">I do not want room cleaning</string>
    <string name="engHotel7">Do you have a parking garage?</string>
    <string name="engMarket1">I want to shop</string>
    <string name="engMarket2">This is my shopping list</string>
    <string name="engMarket3">Where are the market cars?</string>
    <string name="engMarket4">How much is the total price?</string>
    <string name="engMarket5">I want to pay cash</string>
    <string name="engMarket6">I want to pay by card</string>
    <string name="engMarket7">I do not want receipt, thanks</string>
    <string name="engCafe1">I want one..</string>
    <string name="engCafe2">Is there.. in this cafe?</string>
    <string name="engCafe3">What is your drink recommendation?</string>
    <string name="engCafe4">What is your food recommendation?</string>
    <string name="engCafe5">I want the same again</string>
    <string name="engCafe6">Check please?</string>
    <string name="engCafe7">Service was good, thanks</string>
    <string name="engMeet1">Can we meet?</string>
    <string name="engMeet2">What is your name?</string>
    <string name="engMeet3">My name is..</string>
    <string name="engMeet4">How old are you?</string>
    <string name="engMeet5">I am.. years old</string>
    <string name="engMeet6">Can I have your phone number?</string>
    <string name="engMeet7">My phone number..</string>
    <string name="engFriendship1">How are you?</string>
    <string name="engFriendship2">I am good, i am bad</string>
    <string name="engFriendship3">How was your day?</string>
    <string name="engFriendship4">I had a.. day</string>
    <string name="engFriendship5">Good, bad</string>
    <string name="engFriendship6">Great, lousy</string>
    <string name="engFriendship7">I hope to see you again soon</string>
    <string name="engGreeting1">Hello!</string>
    <string name="engGreeting2">Good morning</string>
    <string name="engGreeting3">Good day</string>
    <string name="engGreeting4">Good evening</string>
    <string name="engGreeting5">Good night</string>
    <string name="engGreeting6">Bye bye</string>
    <string name="engGreeting7">Take care of yourself</string>
    <string name="engNumbers1">One, two, three, four, five</string>
    <string name="engNumbers2">Six, seven, eight, nine</string>
    <string name="engNumbers3">Ten, twenty, thirty, forty, fifty</string>
    <string name="engNumbers4">Sixty, seventy, eighty, ninety</string>
    <string name="engNumbers5">One hundred</string>
    <string name="engNumbers6">Three hundred nineteen</string>
    <string name="engNumbers7">Eight hundred eleven</string>
    <string name="engTechnology1">Computer, laptop</string>
    <string name="engTechnology2">Telephone, television</string>
    <string name="engTechnology3">Oven, ironing machine</string>
    <string name="engTechnology4">Air conditioner, calculator</string>
    <string name="engTechnology5">Refrigerator, vacuum cleaner</string>
    <string name="engTechnology6">Dishwasher, washing machine</string>
    <string name="engTechnology7">Radio, toaster</string>
    <string name="engJobs1">Doctor, engineer, teacher</string>
    <string name="engJobs2">Judge, nurse, lawyer</string>
    <string name="engJobs3">Astronaut, architect, pharmacist</string>
    <string name="engJobs4">Banker, stockbroker, driver</string>
    <string name="engJobs5">Physiotherapist, cook, gallerist</string>
    <string name="engJobs6">Barber, farmer, housewife</string>
    <string name="engJobs7">Politician, jeweler, gardener</string>
    <string name="engLove1">I love you</string>
    <string name="engLove2">I miss you</string>
    <string name="engLove3">I adore you</string>
    <string name="engLove4">You are mine</string>
    <string name="engLove5">You are my everything</string>
    <string name="engLove6">You are the only one for me</string>
    <string name="engLove7">I am happy to be with you</string>
</resources>