<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/page_background3"
    tools:context=".AirportActivity">

    <TextView
        android:id="@+id/txtViewL1"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport1"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnImageS1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/btn_background2"
        android:scaleType="centerInside"
        android:foreground="@drawable/effect"
        app:layout_constraintEnd_toStartOf="@+id/txtViewW1"
        app:layout_constraintStart_toEndOf="@+id/txtViewL1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sound" />

    <TextView
        android:id="@+id/txtViewW1"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport1"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewL2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport2"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtViewL1"
        app:layout_constraintStart_toStartOf="@+id/txtViewL1"
        app:layout_constraintTop_toBottomOf="@+id/txtViewL1" />

    <ImageButton
        android:id="@+id/btnImageS2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background2"
        android:scaleType="centerInside"
        android:foreground="@drawable/effect"
        app:layout_constraintEnd_toStartOf="@+id/txtViewW2"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/txtViewL2"
        app:layout_constraintTop_toBottomOf="@+id/btnImageS1"
        app:srcCompat="@drawable/sound" />

    <TextView
        android:id="@+id/txtViewW2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport2"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txtViewW1"
        app:layout_constraintStart_toStartOf="@+id/txtViewW1"
        app:layout_constraintTop_toBottomOf="@+id/txtViewW1" />

    <TextView
        android:id="@+id/txtViewL3"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport3"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtViewL2"
        app:layout_constraintStart_toStartOf="@+id/txtViewL2"
        app:layout_constraintTop_toBottomOf="@+id/txtViewL2" />

    <ImageButton
        android:id="@+id/btnImageS3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background2"
        android:scaleType="centerInside"
        android:foreground="@drawable/effect"
        app:layout_constraintEnd_toStartOf="@+id/txtViewW3"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/txtViewL3"
        app:layout_constraintTop_toBottomOf="@+id/btnImageS2"
        app:srcCompat="@drawable/sound" />

    <TextView
        android:id="@+id/txtViewW3"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport3"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txtViewW2"
        app:layout_constraintStart_toStartOf="@+id/txtViewW2"
        app:layout_constraintTop_toBottomOf="@+id/txtViewW2" />

    <TextView
        android:id="@+id/txtViewL4"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport4"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtViewL3"
        app:layout_constraintStart_toStartOf="@+id/txtViewL3"
        app:layout_constraintTop_toBottomOf="@+id/txtViewL3" />

    <ImageButton
        android:id="@+id/btnImageS4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background2"
        android:scaleType="centerInside"
        android:foreground="@drawable/effect"
        app:layout_constraintEnd_toStartOf="@+id/txtViewW4"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/txtViewL4"
        app:layout_constraintTop_toBottomOf="@+id/btnImageS3"
        app:srcCompat="@drawable/sound" />

    <TextView
        android:id="@+id/txtViewW4"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport4"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txtViewW3"
        app:layout_constraintStart_toStartOf="@+id/txtViewW3"
        app:layout_constraintTop_toBottomOf="@+id/txtViewW3" />

    <TextView
        android:id="@+id/txtViewL5"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport5"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtViewL4"
        app:layout_constraintStart_toStartOf="@+id/txtViewL4"
        app:layout_constraintTop_toBottomOf="@+id/txtViewL4" />

    <ImageButton
        android:id="@+id/btnImageS5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background2"
        android:scaleType="centerInside"
        android:foreground="@drawable/effect"
        app:layout_constraintEnd_toStartOf="@+id/txtViewW5"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/txtViewL5"
        app:layout_constraintTop_toBottomOf="@+id/btnImageS4"
        app:srcCompat="@drawable/sound" />

    <TextView
        android:id="@+id/txtViewW5"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport5"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txtViewW4"
        app:layout_constraintStart_toStartOf="@+id/txtViewW4"
        app:layout_constraintTop_toBottomOf="@+id/txtViewW4" />

    <TextView
        android:id="@+id/txtViewL6"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport6"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtViewL5"
        app:layout_constraintStart_toStartOf="@+id/txtViewL5"
        app:layout_constraintTop_toBottomOf="@+id/txtViewL5" />

    <ImageButton
        android:id="@+id/btnImageS6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background2"
        android:scaleType="centerInside"
        android:foreground="@drawable/effect"
        app:layout_constraintEnd_toStartOf="@+id/txtViewW6"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/txtViewL6"
        app:layout_constraintTop_toBottomOf="@+id/btnImageS5"
        app:srcCompat="@drawable/sound" />

    <TextView
        android:id="@+id/txtViewW6"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport6"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txtViewW5"
        app:layout_constraintStart_toStartOf="@+id/txtViewW5"
        app:layout_constraintTop_toBottomOf="@+id/txtViewW5" />

    <TextView
        android:id="@+id/txtViewL7"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport7"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtViewL6"
        app:layout_constraintStart_toStartOf="@+id/txtViewL6"
        app:layout_constraintTop_toBottomOf="@+id/txtViewL6" />

    <ImageButton
        android:id="@+id/btnImageS7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background2"
        android:scaleType="centerInside"
        android:foreground="@drawable/effect"
        app:layout_constraintEnd_toStartOf="@+id/txtViewW7"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/txtViewL7"
        app:layout_constraintTop_toBottomOf="@+id/btnImageS6"
        app:srcCompat="@drawable/sound" />

    <TextView
        android:id="@+id/txtViewW7"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_round"
        android:gravity="center"
        android:text="@string/engAirport7"
        android:textColor="@color/color2"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txtViewW6"
        app:layout_constraintStart_toStartOf="@+id/txtViewW6"
        app:layout_constraintTop_toBottomOf="@+id/txtViewW6" />

    <ImageButton
        android:id="@+id/btnImageTurnBack"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_background4"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnImageS7"
        app:layout_constraintStart_toStartOf="@+id/btnImageS7"
        app:layout_constraintTop_toBottomOf="@+id/btnImageS7"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/back" />

</androidx.constraintlayout.widget.ConstraintLayout>